{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "8f401e0b-25a4-40a0-9e53-7007d8ed8052",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "9b541071-f879-4df7-8797-bba242bffd93",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "206b6c23-89f3-490e-b5cc-519a1df53933",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "172c19f0-59a3-4bff-8ab7-eb1ea6f40ad4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "29c27b73-3259-4ae2-88e3-00a8c9237f57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "5667b8fb-c638-459f-8f20-f8bbe8ecdbff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "417d8f8a-e88e-4223-a9ac-17e003e557fa",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f461a287-05d8-49f0-832e-6dde130eaeb3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36a6f12a-1a73-4fcc-99fd-c23b71f5f345",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59835334-5b27-46ba-adfb-d7d419cc8c16",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ccf84fa-089a-4ef5-8fbd-3a2b973c179a",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}